--- a/SideWalkFromMatFile.ipynb
+++ b/SideWalkFromMatFile.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:67ac1b9133b43597d687377ff1c7a0fda27fb3ab9bc8508e48d63e86a434507f"
+  "signature": "sha256:c088e0182b6ad3da8d2477888cad3470d780d1c0eb44092455da18e3de038130"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -790,7 +790,20 @@
       "clf = svm.SVC()\n",
       "clf.fit(X, Y)\n",
       "print(clf.score(X,np.ravel(Y)))\n",
-      "print(clf.score(Xt,np.ravel(Yt)))"
+      "print(clf.score(Xt,np.ravel(Yt)))\n",
+      "\n",
+      "# on other kinds of kernels \n",
+      "clf = svm.SVC(kernel='sigmoid')\n",
+      "clf.fit(X, Y)\n",
+      "print(clf.score(X,np.ravel(Y)))\n",
+      "print(clf.score(Xt,np.ravel(Yt)))\n",
+      "\n",
+      "# on other kinds of kernels \n",
+      "clf = svm.SVC(kernel='rbf')\n",
+      "clf.fit(X, Y)\n",
+      "print(clf.score(X,np.ravel(Y)))\n",
+      "print(clf.score(Xt,np.ravel(Yt)))\n",
+      "\n"
      ],
      "language": "python",
      "metadata": {},
@@ -807,11 +820,43 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
+        "\n",
+        "0.627"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "0.6154"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "0.9403"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "0.9404"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
         "\n"
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 18
     },
     {
      "cell_type": "heading",
@@ -860,6 +905,12 @@
       "clf = svm.SVC()\n",
       "clf.fit(PLEtrain, Y)\n",
       "print(clf.score(PLEtrain,np.ravel(Y)))\n",
+      "print(clf.score(PLEtest,np.ravel(Yt)))\n",
+      "\n",
+      "# on other kinds of kernels \n",
+      "clf = svm.SVC(kernel='rbf')\n",
+      "clf.fit(PLEtrain, Y)\n",
+      "print(clf.score(PLEtrain,np.ravel(Y)))\n",
       "print(clf.score(PLEtest,np.ravel(Yt)))"
      ],
      "language": "python",
@@ -877,11 +928,27 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
+        "\n",
+        "0.9403"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "0.9404"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
         "\n"
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 20
     },
     {
      "cell_type": "heading",
@@ -921,6 +988,115 @@
      "source": [
       "Linear Discriminant Analysis "
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from sklearn.naive_bayes import GaussianNB\n",
+      "clf = GaussianNB()\n",
+      "clf.fit(X, Y)\n",
+      "print(clf.score(X,Y))\n",
+      "print(clf.score(Xt,Yt))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "0.9864\n",
+        "0.3837\n"
+       ]
+      }
+     ],
+     "prompt_number": 23
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from sklearn.naive_bayes import GaussianNB\n",
+      "clf = GaussianNB()\n",
+      "clf.fit(PLEtrain, Y)\n",
+      "print(clf.score(PLEtrain,Y))\n",
+      "print(clf.score(PLEtest,Yt))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "0.987\n",
+        "0.3842"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 24
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Neural Nets "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from sklearn.neural_network import MLPClassifier\n",
+      "\n",
+      "clf = MLPClassifier(algorithm='l-bfgs', alpha=1e-5, hidden_layer_sizes=(5, 2), random_state=1)\n",
+      "clf.fit(X, Y)\n",
+      "clf.score(X,Y)\n",
+      "clf.score(Xt,Yt)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "ImportError",
+       "evalue": "cannot import name MLPClassifier",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-26-5fa0f307dabd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mneural_network\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mMLPClassifier\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mclf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mMLPClassifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0malgorithm\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'l-bfgs'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1e-5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhidden_layer_sizes\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mclf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mY\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mclf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mImportError\u001b[0m: cannot import name MLPClassifier"
+       ]
+      }
+     ],
+     "prompt_number": 26
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Compare against naive implementation "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#nick can do this "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 31
     },
     {
      "cell_type": "code",
