Validation on whole dataset

--- a/SideWalkValidation.ipynb
+++ b/SideWalkValidation.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6632dcf42f26ed4eed580ccb0a3bba4a62030654fd77457020f8d760f78d66c9"
+  "signature": "sha256:acc5de2f336a68920ee47c19be07af6e1f5c57af1062346faac1d1013a4a9bc6"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -61,84 +61,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "#get unique elements of each feature \n",
-      "\n",
-      "curbtypeName = pd.Series(bla['curbtype_i'].unique())\n",
-      "surfName = pd.Series(bla['surftype_i'].unique())\n",
-      "intersectsName = pd.Series(bla['intersects'].unique())"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 4
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "#convert features from strings to numbers\n",
-      "\n",
-      "for i in range(0,len(curbtypeName)):\n",
-      "    bla2['curbtype_i'][bla['curbtype_i'].str.match(curbtypeName[i])] = float(i)\n",
-      "    bla2['curbtype_j'][bla['curbtype_j'].str.match(curbtypeName[i])] = float(i)    \n",
-      "    \n",
-      "for i in range(0,len(surfName)):\n",
-      "    bla2['surftype_i'][bla['surftype_i'].str.match(surfName[i])] = float(i)\n",
-      "    bla2['surftype_j'][bla['surftype_j'].str.match(surfName[i])] = float(i)    \n",
-      "    \n",
-      "for i in range(0,len(intersectsName)):\n",
-      "    bla2['intersects'][bla['intersects'].str.match(intersectsName[i])] = float(i)\n",
-      "        "
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "-c:4: SettingWithCopyWarning: \n",
-        "A value is trying to be set on a copy of a slice from a DataFrame\n",
-        "\n",
-        "See the the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-        "-c:5: SettingWithCopyWarning: \n",
-        "A value is trying to be set on a copy of a slice from a DataFrame\n",
-        "\n",
-        "See the the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "-c:8: SettingWithCopyWarning: \n",
-        "A value is trying to be set on a copy of a slice from a DataFrame\n",
-        "\n",
-        "See the the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-        "-c:9: SettingWithCopyWarning: \n",
-        "A value is trying to be set on a copy of a slice from a DataFrame\n",
-        "\n",
-        "See the the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "-c:12: SettingWithCopyWarning: \n",
-        "A value is trying to be set on a copy of a slice from a DataFrame\n",
-        "\n",
-        "See the the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
-       ]
-      }
-     ],
-     "prompt_number": 5
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
@@ -146,22 +69,15 @@
      "input": [
       "# adding new features (whether numeric elements are the same ) and making feature matrix \n",
       "\n",
-      "curbSame = 1*(bla2['curbtype_i']==bla2['curbtype_i'])\n",
-      "surfSame = 1*(bla2['surftype_i']==bla2['surftype_j'])\n",
-      "distInd = abs(bla2['id_i']-bla2['id_j']) #calculating absolute value of distance between indices \n",
-      "distInd = distInd/max(distInd)\n",
       "\n",
       "X_naive = np.array([bla2['id_i'],bla2['id_j'],bla2['distance']])\n",
       "\n",
-      "X = np.array([bla2['sw_width_i'],bla2['sw_width_j'],bla2['side_i'],bla2['side_j'],bla2['surftype_i'],\\\n",
-      "              bla2['surftype_j'],bla2['distance'],bla2['intersects'],curbSame,surfSame,distInd])\n",
-      "X_naive = X_naive.T\n",
-      "X = X.T + 0.0001"
+      "X_naive = X_naive.T\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 28
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
@@ -177,17 +93,13 @@
       "InR = np.random.shuffle(In)\n",
       "\n",
       "yR = y[In]\n",
-      "Xr = X[In,:] \n",
       "X_naiveR = X_naive[In,:]\n",
-      "\n",
-      "yR = yR[:50000]\n",
-      "Xr = Xr[:50000,:]\n",
-      "X_naiveR = X_naiveR[:50000,:]"
+      "\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 29
+     "prompt_number": 23
     },
     {
      "cell_type": "heading",
@@ -205,8 +117,15 @@
       "yPred = np.zeros(len(yR))\n",
       "UnqInd = np.unique(X_naiveR[:,0])\n",
       "for ind in UnqInd:\n",
-      "    minInd = np.argmin(X_naiveR[(X_naiveR[:,0]==ind),2])\n",
-      "    yPred[minInd]=1\n",
+      "    minInd1 = np.argmin(X_naiveR[(X_naiveR[:,0]==ind),2])\n",
+      "    minInd2 = np.argmin(X_naiveR[(X_naiveR[:,1]==ind),2])\n",
+      "    min1 = np.amin(X_naiveR[(X_naiveR[:,0]==ind),2])\n",
+      "    min2 = np.amin(X_naiveR[(X_naiveR[:,0]==ind),2])\n",
+      "    if min1<min2:\n",
+      "        yPred[minInd1]=1\n",
+      "    else:\n",
+      "        yPred[minInd2]=1\n",
+      "    \n",
       "    \n",
       "perCorr = sum(yPred==yR)/len(yR)    \n",
       "print perCorr*100"
@@ -218,11 +137,70 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "86.676\n"
+        "86.5462577123\n"
        ]
       }
      ],
-     "prompt_number": 44
+     "prompt_number": 51
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "yCorr = (yPred==yR)\n",
+      "yPredP = (yPred==1)\n",
+      "yPredN = (yPred==0)\n",
+      "TP = sum((yCorr[yPred==1]==True))\n",
+      "TN = sum((yCorr[yPred==0]==True))\n",
+      "FP = sum((yCorr[yPred==1]==False))\n",
+      "FN = sum((yCorr[yPred==0]==False))\n",
+      "\n",
+      "Prec = TP/(TP+FP)\n",
+      "Rec = TP/(TP+FN)\n",
+      "\n",
+      "print Prec*100\n",
+      "print Rec*100"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "7.69230769231\n",
+        "0.00300228173412\n"
+       ]
+      }
+     ],
+     "prompt_number": 52
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 33
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 48,
+       "text": [
+        "(28,)"
+       ]
+      }
+     ],
+     "prompt_number": 48
     },
     {
      "cell_type": "code",
