Add visualization on crowdsourced errors

--- a/TrainOnCrowdLabels.ipynb
+++ b/TrainOnCrowdLabels.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d2c10dd832026d74881929db152b140cbe15b632b212808226bc1cc5200ff8e3"
+  "signature": "sha256:65aad0e9103b8d3b6f890b4071fb43d5567f1c887bfa0fd1666e6fd8228b1305"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2378,7 +2378,8 @@
      "collapsed": false,
      "input": [
       "print \"Precision : {}\".format(TP/(TP + FP))   \n",
-      "print \"Recall : {}\".format(TP/(TP + FN))   "
+      "print \"Recall : {}\".format(TP/(TP + FN))   \n",
+      "print \"Score : {}\".format(1-len(DisLabels)/len(raw_data2))"
      ],
      "language": "python",
      "metadata": {},
@@ -2388,11 +2389,12 @@
        "stream": "stdout",
        "text": [
         "Precision : 0.876774559909\n",
-        "Recall : 0.682280159081\n"
+        "Recall : 0.682280159081\n",
+        "Score : 0.912038342261\n"
        ]
       }
      ],
-     "prompt_number": 33
+     "prompt_number": 37
     },
     {
      "cell_type": "heading",
