--- a/GenFaultsMaps.ipynb
+++ b/GenFaultsMaps.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:72a0f588c60389bbb1e4888382d57c46ced4aa81ba880d3acb6a33e5adfa9515"
+  "signature": "sha256:cd39938f21da010cf5b89bd496fcbd6e8ff59db6414dc637f98e29f0e1ec2681"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -729,14 +729,15 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#learning a decision tree\n",
-      "from sklearn import tree\n",
-      "DT = tree.DecisionTreeClassifier()\n",
-      "DT = DT.fit(X_train, y_train)\n",
-      "print(DT.score(X_test, y_test))\n",
-      "Dt_pred = DT.predict(X_test)\n",
-      "print precision_score(y_test, Dt_pred)\n",
-      "print recall_score(y_test, Dt_pred)"
+      "from sklearn import svm\n",
+      "\n",
+      "#SVM with a RBF kernel \n",
+      "svmR = svm.SVC(kernel='rbf')\n",
+      "svmR.fit(X_train, y_train)\n",
+      "print svmR.score(X_test, y_test)\n",
+      "svmR_pred = svmR.predict(X_test)\n",
+      "print precision_score(y_test, svmR_pred)\n",
+      "print recall_score(y_test, svmR_pred)"
      ],
      "language": "python",
      "metadata": {},
@@ -745,19 +746,26 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "0.933471152039\n",
-        "0.848512173129\n",
-        "0.834960070985\n"
+        "0.958278519075\n",
+        "0.913242009132"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "0.887311446318\n"
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "X_pred = DT.predict(X)\n",
+      "X_pred = svmR.predict(X)\n",
       "\n",
       "X_out = X.copy()\n",
       "X_acc = X_pred == y\n",
@@ -779,14 +787,14 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "(2074, 11)\n",
-        "(8210, 11)\n",
-        "(168, 11)\n",
-        "(189, 11)\n"
+        "(2000, 11)\n",
+        "(8180, 11)\n",
+        "(198, 11)\n",
+        "(263, 11)\n"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
